--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <%- include('head'); -%>
+    <%- include('partials/head'); -%>
 </head>
 <body class="container">
 
 <header>
-
+  <%- include('partials/header'); -%>
 </header>
 
 <main>
@@ -19,7 +19,7 @@
 </main>
 
 <footer>
-    <%- include ('footer')-%>
+    <%- include ('partials/footer')-%>
 </footer>
 
 </body>
