--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
       <div class="navbar-header">
           <a class="navbar-brand" href="#">
               <span class="glyphicon glyphicon glyphicon-tree-deciduous"></span>
-              Messaging users is fun! No spamming though!
+              Business Growth Mentor
           </a>
       </div>
       <ul class="nav navbar-nav">
