--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,7 @@
     <div class="container">
 
         <h2>Welcome! Please log in.</h2>
-        <a href="/auth/facebook"><img src="assets/fb-login.jpg" width="151" height="24"></a>
+        <a href="/auth/facebook"><img src="./assets/fb-login.jpg" width="151" height="24"></a>
     </div>
 </main>
 
