--- a/views/broadcast.ejs
+++ b/views/broadcast.ejs
@@ -9,7 +9,24 @@
 <header>
     <%- include ('partials/header') -%>
 </header>
+<script>
+window.fbAsyncInit = function() {
+FB.init({
+  appId      : '589650818321549',
+  xfbml      : true,
+  version    : 'v7.0'
+});
+FB.AppEvents.logPageView();
+};
 
+(function(d, s, id){
+ var js, fjs = d.getElementsByTagName(s)[0];
+ if (d.getElementById(id)) {return;}
+ js = d.createElement(s); js.id = id;
+ js.src = "https://connect.facebook.net/en_US/sdk.js";
+ fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));
+</script>
 <main>
     <div class="container">
         <h2>Hello, <%= user.displayName %></h2>
